fix alignment bug

--- a/client/src/app/components/user-input/user-input.component.css
+++ b/client/src/app/components/user-input/user-input.component.css
@@ -152,6 +152,7 @@ li {
   text-align: center;
   top: 50vh;
   inline-size: 80vw;
+  align-self: center;
 }
 
 input[type=text].ng-invalid {
